Updated the documentation.
